# lemoria

./: .coverage  .env.example  .gitignore  Dockerfile  INSTALL.md  LICENSE  README.md  alembic.ini  docker-compose.yml  index.html  install.sh  opencode.jsonc  pyproject.toml
.github/workflows/: ci.yml
.opencode/agents/: backend-agent.md  db-agent.md  documentation-agent.md  frontend-agent.md  github-agent.md  implementation-agent.md  orchestrator.md  review-agent.md  testing-agent.md
.opencode/skills/backend/: SKILL.md
.opencode/skills/code-review/: SKILL.md
.opencode/skills/database/: SKILL.md
.opencode/skills/documentation/: SKILL.md
.opencode/skills/frontend/: SKILL.md
.opencode/skills/git-workflow/: SKILL.md
.opencode/skills/lemoria/: SKILL.md
.opencode/skills/testing/: SKILL.md
agents/: backend-agent.md  db-agent.md  documentation-agent.md  github-agent.md  orchestrator.md  review-agent.md  testing-agent.md
database/: enums.py
database/models/: __init__.py  agent.py  agent_execution.py  base.py  commit.py  context.py  conversation.py  decision.py  error_record.py  file_record.py  flow_step.py  prd.py  project.py  solution.py  spec.py  task.py
docs/: ARCHITECTURE.md  PRD.md  ROADMAP.md  SDD.md
lemoria/: __init__.py  cli.py  config.py  core.py  database.py  flow.py  git_service.py  memory.py  orchestrator.py  project.py  vault.py
tests/: conftest.py  test_cli.py  test_flow.py  test_project.py  test_vault.py
vault/obsidian/projects/.obsidian/: graph.json  workspace.json
vault/obsidian/projects/boilerplate-django/: README.md  agents.md  (+2 more)
(+76 files in other folders)
